# PSsMOIN

./: LICENSE  README.md
.github/workflows/: runtests.yml
cevelop-workspace/PSsMOIN/: .cproject  .gitignore  .project  CMakeLists.txt  PSsMOIN.xml
cevelop-workspace/PSsMOIN/src/: CodeGenBenchmark.cpp  CompilationTests.cpp  Test.cpp  TestForThrowingAsserts.cpp  numericLimitsStaticTests.cpp  pssmoin.h
cevelop-workspace/PSsMOINwithStruct/: .cproject  .project  CMakeLists.txt  PSsMOINwithStruct.xml
cevelop-workspace/PSsMOINwithStruct/src/: CodeGenBenchmark.cpp  CompilationTests.cpp  Test.cpp  TestForThrowingAsserts.cpp  moins.h  numericLimitsStaticTests.cpp
include/: moins.h  pssmoin.h
